# nightcrew

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml
docs/: notifications-feishu-zh.md
src/ccnight/: __init__.py  cli.py  config.py  daemon.py  notify.py  queue.py  runner.py  service.py
src/nightcrew/: __init__.py  cleanup.py  cli.py  config.py  daemon.py  limits.py  notify.py  onboard.py  queue.py  runner.py  service.py  web.py  worktree.py
src/nightcrew/skill/: SKILL.md
tests/: conftest.py  test_cleanup.py  test_cli.py  test_daemon.py  test_limits.py  test_notify.py  test_queue.py  test_runner.py  test_web.py  test_worktree.py
tests/fakes/: claude
