[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightcrew"
version = "0.1.0"
description = "Quota-aware task queue and auto-resume daemon for Claude Code - use the quota you already paid for while you sleep."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nightcrew contributors" }]
keywords = [
  "claude",
  "claude-code",
  "task-queue",
  "scheduler",
  "usage-limit",
  "automation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
# Runtime is stdlib-only by design. Keep this list empty.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
nightcrew = "nightcrew.cli:main"

[project.urls]
Homepage = "https://github.com/nightcrew/nightcrew"
Issues = "https://github.com/nightcrew/nightcrew/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
